[package]
name = "day7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
itertools = "0.12"
cfg-if = "1.0"

[features]
part2 = []

[[bin]]
name = "part2"
required-features = ["part2"]
